--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -10,7 +10,10 @@
   "author": "Kovith <Kovith@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.1"
   },
   "devDependencies": {
     "eslint": "^8.54.0",
@@ -18,6 +21,7 @@
     "eslint-plugin-import": "^2.29.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.1.0",
-    "prettier": "^3.1.0"
+    "prettier": "^3.1.0",
+    "sequelize-cli": "^6.6.2"
   }
 }
