--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon -e js,ejs",
+    "start:prod": "node index.js",
     "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
     "test": "NODE_ENV=test jest --detectOpenHandles",
     "prepare": "cd .. && husky install todo-app/.husky"
@@ -19,10 +21,12 @@
   "devDependencies": {
     "eslint": "^8.56.0",
     "lint-staged": "^15.2.0",
+    "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
     "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "pg": "^8.11.3",
