--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2",
