--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.2",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
+    "mysql2": "^3.6.5",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2",
     "supertest": "^6.3.3"
