--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.56.0",
     "lint-staged": "^15.2.0",
     "nodemon": "^3.0.2",
@@ -26,6 +27,8 @@
     "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "husky": "^8.0.3",
@@ -33,6 +36,7 @@
     "mysql2": "^3.6.5",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "tiny-csrf": "^1.1.3"
   }
 }
